# gmtest

./: .gitignore  .gitmodules  README.md
ossl/: Makefile.am  config.h  config.status  configure  configure.ac  ossl
ossl/src/: log.h  main.cpp  sm2.cpp  sm2.h
scripts/: openssl-opt.sh
src/: main-14.go  main.go
