#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([ossl], [0.1], [yinzhiqing@163.com])
AC_CONFIG_SRCDIR([./src/main.cpp])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(-Wall -Werror subdir-objects)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC

AC_OUTPUT(Makefile)
